# multi-label-email-intent-classification

./: main.py  pyproject.toml
notebooks/: classifier_finetuning_bert_variants.ipynb  multi_label_email_classification.ipynb
notebooks/multi-label-email-classification-finetuning/distilbert-lora-multi-label/checkpoint-200/: scheduler.pt  trainer_state.json
notebooks/multi-label-email-classification-finetuning/distilbert-lora-multi-label/checkpoint-318/: adapter_config.json  scheduler.pt  trainer_state.json
