[project]
name = "multi-label-email-intent-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.10.1",
    "datasets>=4.2.0",
    "evaluate>=0.4.6",
    "huggingface-hub[cli]>=0.35.3",
    "ipykernel>=7.0.1",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "peft>=0.17.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
]
